--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="images/pic.jpg" alt="Profile Image 200x200">
+              <img src="pic.jpg" alt="Profile Image 200x200">
             </div>
             <div class="column right">
               <div class="text">I'm Siddarth <span class="typing-2"></span></div>
